dnl Process this file with autoconf to produce a configure script.
AC_INIT(rblcheck.c)
AC_PREREQ(2.13)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(rblcheck, 1.5)
AM_CONFIG_HEADER(config.h:config.in)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_DEFINE(_GNU_SOURCE)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(getopt.h)
AC_CHECK_HEADERS(libc.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Figure out where to get res_query from. First, see if it's in the
dnl C library (Linux, and probably a few others). Then, check libbind
dnl (generally, if you've installed bind 8, you're going to want to use
dnl the new library). Finally, check for libresolv (which should exist
dnl on most systems).
AC_CHECK_FUNC(res_query,,
	AC_CHECK_LIB(resolv,res_query,,
		AC_CHECK_LIB(bind,res_query,,
			AC_MSG_ERROR(cannot locate res_query function))))

dnl All done.
AC_OUTPUT(Makefile)
